@@ -14,6 +14,7 @@
   <property name="modal">False</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">True</property>
+  <property name="role">epiphany-cookie-manager</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
@@ -84,7 +85,7 @@
 	      <property name="border_width">12</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
-	      <property name="spacing">6</property>
+	      <property name="spacing">12</property>
 
 	      <child>
 		<widget class="GtkScrolledWindow" id="scrolledwindow1139">
@@ -189,7 +190,7 @@
 	      <property name="border_width">12</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
-	      <property name="spacing">6</property>
+	      <property name="spacing">12</property>
 
 	      <child>
 		<widget class="GtkScrolledWindow" id="scrolledwindow1140">
@@ -225,7 +226,7 @@
 		<widget class="GtkVBox" id="vbox149">
 		  <property name="visible">True</property>
 		  <property name="homogeneous">False</property>
-		  <property name="spacing">0</property>
+		  <property name="spacing">18</property>
 
 		  <child>
 		    <widget class="GtkVButtonBox" id="vbuttonbox2">
@@ -328,6 +329,7 @@
   <property name="default_height">420</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
+  <property name="role">epiphany-encoding-chooser</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
@@ -423,7 +425,7 @@
 		  <property name="yscale">1</property>
 		  <property name="top_padding">0</property>
 		  <property name="bottom_padding">0</property>
-		  <property name="left_padding">18</property>
+		  <property name="left_padding">12</property>
 		  <property name="right_padding">0</property>
 
 		  <child>
@@ -495,7 +497,7 @@
 		  <property name="yscale">1</property>
 		  <property name="top_padding">0</property>
 		  <property name="bottom_padding">0</property>
-		  <property name="left_padding">18</property>
+		  <property name="left_padding">12</property>
 		  <property name="right_padding">0</property>
 
 		  <child>
@@ -545,6 +547,7 @@
   <property name="modal">False</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
+  <property name="role">epiphany-download-manager</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
