@@ -1,5 +1,15 @@
 2005-12-05  Christian Persch  <chpe@cvs.gnome.org>
 
+	* data/glade/certificate-dialogs.glade:
+	* data/glade/epiphany.glade:
+	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
+	* embed/mozilla/GtkNSSDialogs.cpp:
+	* src/pdm-dialog.c: (show_cookies_properties), (pdm_dialog_init):
+
+	Fix spacings to be HIG compliant. Set window roles.
+
+2005-12-05  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/languages.h:
 
 	Add "tt".
